crates/parser/tests/snapshots/integer_leading_zeros.snap
---
source: crates/parser/tests/snapshots.rs
---
# integer-leading-zeros

## Input

```
a 007
b 00

```

## CST

```
SOURCE_FILE@0..11
  ENTRY@0..6
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..5
      NUMERAL@2..5 "007"
    NEWLINE@5..6 "\n"
  ENTRY@6..11
    WORD_KEY@6..7
      WORD@6..7 "b"
    SPACE@7..8 " "
    INTEGER@8..10
      NUMERAL@8..10 "00"
    NEWLINE@10..11 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..5 "007",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@6..7 "b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@8..10 "00",
            },
        },
    ],
}
```

vim:ft=markdown
